--- a/masterpeace/composer.json
+++ b/masterpeace/composer.json
@@ -1,4 +1,6 @@
 {
+
+    
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
@@ -11,7 +13,9 @@
         "laravel/breeze": "^1.23",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "paypal/rest-api-sdk-php": "^1.6",
+        "srmklive/paypal": "~3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -65,4 +69,5 @@
     },
     "minimum-stability": "stable",
     "prefer-stable": true
+    
 }
